<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cines"
            android:title="@string/menu_cines" />
        <item
            android:id="@+id/nav_peliculas"
            android:title="@string/menu_peliculas" />
        <item
            android:id="@+id/nav_dulceria"
            android:title="@string/menu_dulceria" />
        <item
            android:id="@+id/nav_contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_promocion"
            android:title="@string/menu_promocion" />
        <item
            android:id="@+id/nav_socio"
            android:title="@string/menu_socio" />
    </group>
</menu>