<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvPeliculas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPeliculas"
            android:layout_width="140dp"
            android:layout_height="190dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            app:layout_constraintStart_toEndOf="@id/ivPeliculas"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvfecha_estreno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            app:layout_constraintStart_toEndOf="@id/ivPeliculas"
            app:layout_constraintTop_toBottomOf="@+id/tvnombre" />

        <TextView
            android:id="@+id/tvgenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            app:layout_constraintStart_toEndOf="@id/ivPeliculas"
            app:layout_constraintTop_toBottomOf="@+id/tvfecha_estreno" />

        <TextView
            android:id="@+id/tvduracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duracion"
            app:layout_constraintStart_toEndOf="@id/ivPeliculas"
            app:layout_constraintTop_toBottomOf="@+id/tvgenero" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>